RESOLVED FIXED151982
ImmutableNFANodeBuilder's move constructor moves an uninitialized member variable into itself
https://bugs.webkit.org/show_bug.cgi?id=151982
Summary ImmutableNFANodeBuilder's move constructor moves an uninitialized member vari...
Andy Estes
Reported 2015-12-08 00:42:58 PST
ImmutableNFANodeBuilder's move constructor moves an uninitialized member variable into itself
Attachments
Patch (1.57 KB, patch)
2015-12-08 00:45 PST, Andy Estes
no flags
Andy Estes
Comment 1 2015-12-08 00:45:37 PST
WebKit Commit Bot
Comment 2 2015-12-08 10:00:32 PST
Comment on attachment 266852 [details] Patch Clearing flags on attachment: 266852 Committed r193758: <http://trac.webkit.org/changeset/193758>
WebKit Commit Bot
Comment 3 2015-12-08 10:00:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.