ImmutableNFANodeBuilder's move constructor moves an uninitialized member variable into itself https://bugs.webkit.org/show_bug.cgi?id=151982

Reviewed by Darin Adler.

* contentextensions/ImmutableNFANodeBuilder.h:
(WebCore::ContentExtensions::ImmutableNFANodeBuilder::ImmutableNFANodeBuilder):


Canonical link: https://commits.webkit.org/170145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193758 268f45cc-cd09-0410-ab3c-d52691b4dbfc